rename filename; update CmakeLists.txt In CMakeLists.txt: set cxx standard to 11, and add the newly added class implement as library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,9 +5,12 @@ project(RMDControl VERSION 0.1) # 定义项目名称
 # # 设置C标准
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_C_STANDARD_REQUIRED True)
+set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 
 add_library(RMDControl RMDControl.cpp)
+add_library(RMDController RMDController.cpp)
 
 # # 添加一个可执行文件
 # add_executable(RMDControl_main main.c)
